<resources>
    <string name="app_name">My Application</string>
    <string name="what_is_your_next_trip">What is your next trip?</string>
    <string name="hey_boniface">Hey, Boniface</string>
    <string name="from">From</string>
    <string name="bangalore">Bangalore</string>
    <string name="to">To</string>
    <string name="chennai">Chennai</string>
    <string name="choose_your_trip_date">Choose your trip date</string>
    <string name="how_many_seat_you_want">How many seat you want?</string>
    <string name="_1seat">1Seat</string>
    <string name="_1_seat">1 seat</string>
    <string name="_2_seat">2 seat</string>
    <string name="_3_seat">3 seat</string>
    <string name="_4_seat">4 seat</string>
    <string name="_5_seat">5 seat</string>
    <string name="_6_seat">6 seat</string>
    <string name="choose_your_comfort">Choose your comfort!</string>
    <string name="non_ac">Non-Ac</string>
    <string name="sleeper">Sleeper</string>
    <string name="ac_bus">Ac-Bus</string>
    <string name="find_your_bus">Find your bus</string>
    <string name="kallada_transports">Kallada Transports</string>
    <string name="_4_2">4.2</string>
    <string name="_20">$ 20</string>
    <string name="book">Book</string>
    <string name="_8_00">8:00</string>
    <string name="_7_30">7:30</string>
    <string name="choose_your_bus">Choose your bus</string>
    <string name="high">High</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="price">Price</string>
    <string name="mid">Mid</string>
    <string name="ratings">Ratings</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="low">Low</string>
    <string name="_7_seat">7 Seat</string>
    <string name="textview">TextView</string>
</resources>
