<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBECEF"
    android:padding="8dp"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ImageId"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FirstTvId"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_boniface"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageId" />

    <TextView
        android:id="@+id/SecondTvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/what_is_your_next_trip"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FirstTvId" />

    <androidx.cardview.widget.CardView
        android:id="@+id/FirstCardViewId"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:elevation="1dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SecondTvId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Cardview_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:requiresFadingEdge="vertical">

            <ImageView
                android:id="@+id/icons"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/round_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icons2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/round_icon2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LineId"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/LineId"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@id/icons2"
                app:layout_constraintLeft_toRightOf="@id/icons"
                app:layout_constraintRight_toLeftOf="@id/icons"
                app:layout_constraintTop_toBottomOf="@id/icons"
                app:layout_constraintVertical_bias="0.41000003"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/FromTvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/from"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/icons"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/BangaloreTv"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bangalore"
                android:textColor="#FF159B"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="@id/FromTvId"
                app:layout_constraintTop_toBottomOf="@id/FromTvId" />

            <ImageView
                android:id="@+id/round_image_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_import_export"
                android:src="@drawable/circular_background"
                app:layout_constraintBottom_toTopOf="@id/icons2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@id/LineId"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/BangaloreTv"
                app:layout_constraintVertical_bias="0.36"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/Horizontal_LineId"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/round_image_button"
                app:layout_constraintLeft_toRightOf="@id/LineId"
                app:layout_constraintRight_toLeftOf="@id/round_image_button"
                app:layout_constraintTop_toBottomOf="@id/round_image_button"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/ToTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/to"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/icons2"
                app:layout_constraintLeft_toLeftOf="@id/BangaloreTv"
                app:layout_constraintTop_toBottomOf="@id/Horizontal_LineId"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chennai"

                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/ToTv"
                app:layout_constraintTop_toBottomOf="@id/ToTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/SecondCard_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/FirstCardViewId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Text_in_second_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_trip_date"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/Second_card_view_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/Second_card_view_image"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_trns"
                android:src="@drawable/ic_calender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Third_card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SecondCard_view"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:id="@+id/firstTv_on_third_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many_seat_you_want"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:scrollbars="none"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    tools:ignore="ScrollViewSize">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_trns"
                        android:text="@string/_1_seat"
                       android:shadowColor="@android:color/transparent"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_light"
                        android:textStyle="bold" />

                    <TextView
                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/_2_seat"

                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView

                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="25dp"

                        android:text="@string/_3_seat"
                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView

                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="25dp"

                        android:text="@string/_4_seat"
                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView

                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="25dp"
                        android:text="@string/_5_seat"
                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView

                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="25dp"
                        android:text="@string/_6_seat"
                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView

                        style="?android:buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_marginStart="25dp"
                        android:text="@string/_7_seat"
                        android:textAllCaps="false"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/choose_your_comfort"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/last_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_design"
                    android:text="@string/ac_bus"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_design"
                    android:text="@string/non_ac"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_trns"
                    android:text="@string/sleeper"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>

            <Button
                android:id="@+id/Find_your_bus_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient"
                android:text="@string/find_your_bus"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>