<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:background="#EBECEF"
    android:paddingBottom="90dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_viewId"
        app:cardElevation="1dp"
        android:elevation="1dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="180dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Bus_NameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/StarIcon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/StarIcon"
        android:layout_width="30dp"
        android:layout_marginStart="15dp"
        android:layout_height="30dp"
        android:background="@drawable/star_bg"
        android:src="@drawable/ic_star_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/DividerId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Bus_NameTv"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_2"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/DividerId"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintLeft_toRightOf="@id/StarIcon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Bus_NameTv" />

    <TextView
        android:id="@+id/Price_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#EF629A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <View
        android:id="@+id/DividerId"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Bus_NameTv"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/Booking_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/customize_button"
        android:text="@string/book"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DividerId"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/round_icon1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/round_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DividerId"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/round_icon2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/round_icon2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_icon1"
        app:layout_constraintVertical_bias="0.78"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/round_icon1"
        app:layout_constraintRight_toLeftOf="@id/round_icon1"
        app:layout_constraintLeft_toRightOf="@id/round_icon1"
        app:layout_constraintBottom_toTopOf="@id/round_icon2"
        android:orientation="vertical"
        android:layout_height="0dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/TimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8_00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@id/round_icon1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DividerId"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/ChennaiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chennai"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/TimeTv"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintLeft_toRightOf="@id/TimeTv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DividerId"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Time2Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7_30"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/round_icon2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/TimeTv"
        app:layout_constraintRight_toLeftOf="@id/Booking_button"
        app:layout_constraintTop_toBottomOf="@id/TimeTv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/Time2Tv"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/bangalore"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/ChennaiTv"
        app:layout_constraintRight_toLeftOf="@id/Booking_button"
        app:layout_constraintTop_toBottomOf="@id/ChennaiTv"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>